# stream-sleuth

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: StreamSleuth.manifest  StreamSleuth.rc
src/: AboutDialog.cpp  AboutDialog.h  App.cpp  App.h  BaselineStore.cpp  BaselineStore.h  Clipboard.cpp  Clipboard.h  CommandLineParser.cpp  CommandLineParser.h  ConsoleMode.cpp  ConsoleMode.h  CsvWriter.cpp  CsvWriter.h  DpiUtil.cpp  DpiUtil.h  FileTimeUtil.cpp  FileTimeUtil.h  FormatUtil.cpp  FormatUtil.h  Handle.h  JsonWriter.cpp  JsonWriter.h  MainWindow.cpp  MainWindow.h  NtfsUsnFileEnumerator.cpp  NtfsUsnFileEnumerator.h  PathUtil.cpp  PathUtil.h  PreferencesDialog.cpp  PreferencesDialog.h  RecursiveStreamScanner.cpp  RecursiveStreamScanner.h  ScanCoordinator.cpp  ScanCoordinator.h  ScanOptionsDialog.cpp  ScanOptionsDialog.h  SettingsService.cpp  SettingsService.h  ShellHelpers.cpp  (+23 more)
